adds z to xml center

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "mapnik-test-data": "http://mapbox-npm.s3.amazonaws.com/package/mapnik-test-data-2.0.3-fece0a9c546074a1479e9eae2333184029bb2279.tgz",
     "queue-async": "^1.0.7",
-    "tape": "^3.0.1"
+    "tape": "^3.0.1",
+    "tilelive": "^5.3.2"
   }
 }
