--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/mapbox/tilelive-omnivore",
   "dependencies": {
-    "mapnik-omnivore": "https://github.com/mapbox/mapnik-omnivore/tarball/refactor",
+    "mapnik-omnivore": "5.0.0",
     "tilelive-bridge": "^1.2.0",
     "underscore": "^1.7.0"
   },
