--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/mapbox/tilelive-omnivore",
   "dependencies": {
-    "mapnik-omnivore": "~6.1.0",
+    "mapnik-omnivore": "git://github.com/mapbox/mapnik-omnivore.git#nogeo",
     "tilelive-bridge": "~1.2.7",
     "underscore": "^1.7.0"
   },
