--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Implements the tilelive API for a variety of raw data formats",
   "main": "index.js",
   "scripts": {
-    "test": "node test"
+    "test": "tape test/index.js",
+    "coverage": "istanbul cover tape test/index.js && coveralls < ./coverage/lcov.info"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,8 @@
     "mapnik-test-data": "http://mapbox-npm.s3.amazonaws.com/package/mapnik-test-data-2.0.3-fece0a9c546074a1479e9eae2333184029bb2279.tgz",
     "queue-async": "^1.0.7",
     "tape": "^3.0.1",
-    "tilelive": "^5.7.0"
+    "tilelive": "^5.7.0",
+    "istanbul": "~0.3.17",
+    "coveralls": "~2.11.2"
   }
 }
