--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/mapbox/tilelive-omnivore",
   "dependencies": {
-    "mapnik-omnivore": "https://github.com/mapbox/mapnik-omnivore/tarball/resolution-projection-team",
+    "mapnik-omnivore": "~7.0.0",
     "tilelive-bridge": "~2.2.1",
     "underscore": "^1.7.0"
   },
