update mapnik-test-data to 2.1.1

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "mapnik-omnivore": "bin/mapnik-omnivore"
   },
   "devDependencies": {
-    "mapnik-test-data": "http://mapbox-npm.s3.amazonaws.com/package/mapnik-test-data-2.0.3-fece0a9c546074a1479e9eae2333184029bb2279.tgz",
+    "mapnik-test-data": "https://mapbox-npm.s3.amazonaws.com/package/mapnik-test-data-2.1.1-d1476b261f018c28f08c573de3c9885386f52315.tgz",
     "queue-async": "^1.0.7",
     "tape": "^3.0.1",
     "tilelive": "^5.7.0",
