multiple GeoJSONs as input

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Implements the tilelive API for a variety of raw data formats",
   "main": "index.js",
   "scripts": {
+	  "pretest": "eslint bin test *.js",
     "test": "tape test/index.js",
     "coverage": "istanbul cover tape test/index.js && coveralls < ./coverage/lcov.info"
   },
@@ -29,6 +30,7 @@
     "mapnik-test-data": "https://mapbox-npm.s3.amazonaws.com/package/mapnik-test-data-2.1.1-d1476b261f018c28f08c573de3c9885386f52315.tgz",
     "queue-async": "^1.0.7",
     "tape": "^3.0.1",
+    "eslint": "^1.6.0",
     "tilelive": "^5.11.0",
     "istanbul": "~0.3.17",
     "coveralls": "~2.11.2"
