--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "mapnik-test-data": "https://mapbox-npm.s3.amazonaws.com/package/mapnik-test-data-2.1.1-d1476b261f018c28f08c573de3c9885386f52315.tgz",
     "nyc": "^6.0.0",
     "opener": "^1.4.1",
+    "pbf": "^1.3.5",
     "queue-async": "^1.0.7",
     "tape": "^3.0.1",
-    "tilelive": "^5.11.0"
+    "tilelive": "^5.11.0",
+    "vector-tile": "^1.2.0"
   }
 }
