--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/mapbox/tilelive-omnivore",
   "dependencies": {
-    "mapnik-omnivore": "~7.4.0",
+    "mapnik-omnivore": "https://github.com/mapbox/mapnik-omnivore/tarball/minmaxsix",
     "queue-async": "^1.0.7",
     "tilelive-bridge": "~2.3.1",
     "underscore": "^1.7.0"
