add scoped tilelive-bridge

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "homepage": "https://github.com/mapbox/tilelive-omnivore",
   "dependencies": {
     "@mapbox/mapnik-omnivore": "~8.2.0",
+    "@mapbox/tilelive-bridge": "~2.3.1",
     "queue-async": "^1.0.7",
-    "tilelive-bridge": "~2.3.1",
     "underscore": "^1.7.0"
   },
   "bin": {
