--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   },
   "homepage": "https://github.com/mapbox/tilelive-omnivore",
   "dependencies": {
-    "@mapbox/mapnik-omnivore": "~8.3.0",
-    "@mapbox/tilelive-bridge": "~2.3.1",
+    "@mapbox/mapnik-omnivore": "~8.4.0",
+    "@mapbox/tilelive-bridge": "~2.4.0",
     "queue-async": "^1.0.7",
     "underscore": "^1.7.0"
   },
@@ -34,7 +34,7 @@
     "opener": "^1.4.1",
     "pbf": "^1.3.5",
     "tape": "^3.0.1",
-    "tilelive": "^5.11.0",
+    "@mapbox/tilelive": "^5.11.0",
     "vector-tile": "^1.2.0"
   }
 }
