--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "homepage": "https://github.com/mapbox/tilelive-omnivore",
   "dependencies": {
     "@mapbox/mapnik-omnivore": "~8.4.0",
-    "@mapbox/tilelive-bridge": "~2.4.0",
+    "@mapbox/tilelive-bridge": "mapbox/tilelive-bridge#c0ff2499353d0ff5e0c6882dd51ca95ee2d22c0b",
     "queue-async": "^1.0.7",
     "underscore": "^1.7.0"
   },
