--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "homepage": "https://github.com/mapbox/tilelive-omnivore",
   "dependencies": {
     "@mapbox/mapnik-omnivore": "~8.4.0",
-    "@mapbox/tilelive-bridge": "mapbox/tilelive-bridge#1fd088d46f341fc183e699dc1d8d6be91fdaf118",
+    "@mapbox/tilelive-bridge": "~2.5.0",
     "queue-async": "^1.0.7",
     "underscore": "^1.7.0"
   },
