--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/mapbox/tilelive-omnivore",
   "dependencies": {
-    "@mapbox/mapnik-omnivore": "~8.4.0",
+    "@mapbox/mapnik-omnivore": "mapbox/mapnik-omnivore#0cda98a617275bf9ab9dae95a0e17f161664a103",
     "@mapbox/tilelive-bridge": "~2.5.0",
     "queue-async": "^1.0.7",
     "underscore": "^1.7.0"
