allow minor versions

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "homepage": "https://github.com/mapbox/tilelive-omnivore",
   "dependencies": {
     "@mapbox/mapnik-omnivore": "^9.1.0",
-    "@mapbox/tilelive-bridge": "~3.2.0",
+    "@mapbox/tilelive-bridge": "^3.2.0",
     "queue-async": "^1.0.7",
     "underscore": "^1.7.0"
   },
