--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mapbox/tilelive-omnivore",
-  "version": "4.1.0",
+  "version": "4.2.0",
   "description": "Implements the tilelive API for a variety of raw data formats",
   "main": "index.js",
   "scripts": {
@@ -19,8 +19,8 @@
   },
   "homepage": "https://github.com/mapbox/tilelive-omnivore",
   "dependencies": {
-    "@mapbox/mapnik-omnivore": "~9.0.0",
-    "@mapbox/tilelive-bridge": "~3.1.0",
+    "@mapbox/mapnik-omnivore": "^9.1.1",
+    "@mapbox/tilelive-bridge": "^3.2.0",
     "queue-async": "^1.0.7",
     "underscore": "^1.7.0"
   },
