--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mapbox/tilelive-omnivore",
-  "version": "4.1.0",
+  "version": "4.1.1",
   "description": "Implements the tilelive API for a variety of raw data formats",
   "main": "index.js",
   "scripts": {
@@ -20,7 +20,7 @@
   "homepage": "https://github.com/mapbox/tilelive-omnivore",
   "dependencies": {
     "@mapbox/mapnik-omnivore": "~9.0.0",
-    "@mapbox/tilelive-bridge": "~3.1.0",
+    "@mapbox/tilelive-bridge": "^3.1.2",
     "queue-async": "^1.0.7",
     "underscore": "^1.7.0"
   },
