--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/mapbox/tilelive-omnivore",
   "dependencies": {
-    "@mapbox/mapnik-omnivore": "10.0.0-dev1",
+    "@mapbox/mapnik-omnivore": "10.0.0",
     "@mapbox/tilelive-bridge": "^3.2.0",
     "queue-async": "^1.0.7",
     "underscore": "^1.7.0"
